--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,8 @@
 .settings
 /target/*
 /tmp/*
+dependency-reduced-pom.xml
 
-# Packages #
 ############
 # it's better to unpack these files and commit the raw source
 # git has its own built in compression methods
